@@ -1,3 +1,8 @@
+2012-02-25  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/munged/random.c (random_init):
+	  Set _random_timer_id when initial callback is scheduled.
+
 2012-02-24  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/munged/random.c (_random_seed_stir_callback): Added.
